TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <inlineHelpText>Number of attendees</inlineHelpText>
    <label>Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>