TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Avg_Survey_Score__c.field-meta.xml
<CustomField>
    <fullName>Avg_Survey_Score__c</fullName>
    <inlineHelpText>Overall or Average Survey Score</inlineHelpText>
    <label>Survey Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>