TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Documentation_Link__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Link__c</fullName>
    <inlineHelpText>Add link to documentation here</inlineHelpText>
    <label>Documentation Link</label>
    <type>Url</type>
</CustomField>