TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date of the event or webinar</description>
    <inlineHelpText>Date of the event or webinar</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>