TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Labs_Solution__c.field-meta.xml
<CustomField>
    <fullName>Labs_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will this App/Tool be a Labs App?</inlineHelpText>
    <label>Labs Solution</label>
    <type>Checkbox</type>
</CustomField>