TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Recap_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Recap_Feedback__c</fullName>
    <label>Recap Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>