TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Recap_Score__c.field-meta.xml
<CustomField>
    <fullName>Recap_Score__c</fullName>
    <inlineHelpText>Should we do this again with 0 meaning no do not do this again to 5 absolutely we should do it again</inlineHelpText>
    <label>Recap Score (0-5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>