TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Registered_Bookmark__c.field-meta.xml
<CustomField>
    <fullName>Registered_Bookmark__c</fullName>
    <inlineHelpText>Number of people registered or bookmarked the session</inlineHelpText>
    <label>Registered/Bookmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>