TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Owner</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Projects (Secondary Owner)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>