TEBuildOrg-Project/force-app/main/default/objects/Project__c/fields/V2MOM_Method__c.field-meta.xml
<CustomField>
    <fullName>V2MOM_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>V2MOM Method Project is Aligned To</inlineHelpText>
    <label>V2MOM Method</label>
    <referenceTo>V2MOM_Method__c</referenceTo>
    <relationshipLabel>Associated Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>