TEBuildOrg-Project/force-app/main/default/objects/Project__c/recordTypes/Apps_Tools.recordType-meta.xml
<RecordType>
    <fullName>Apps_Tools</fullName>
    <active>true</active>
    <label>Apps/Tools</label>
</RecordType>