TEBuildOrg-Project/force-app/main/default/objects/Project__c/listViews/Projects.listView-meta.xml
<ListView>
    <fullName>Projects</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>