TEBuildOrg-Project/force-app/main/default/objects/Project__c/listViews/Webinars.listView-meta.xml
<ListView>
    <fullName>Webinars</fullName>
    <columns>NAME</columns>
    <columns>Short_Description__c</columns>
    <columns>Active__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Webinar</value>
    </filters>
    <label>Webinars</label>
</ListView>