TEBuildOrg-Project/force-app/main/default/objects/Project__c/listViews/Workshops.listView-meta.xml
<ListView>
    <fullName>Workshops</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Workshop</value>
    </filters>
    <label>Workshops</label>
</ListView>